--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         </p>
                         <div class="tab-titles">
                             <p class="tab-links active-link" onclick="opentab('introduction')">Information</p>
-                            <p class="tab-links" onclick="opentab('skills')">Programming Skills</p>
+                            <p class="tab-links" onclick="opentab('skills')">Skills</p>
                             <p class="tab-links" onclick="opentab('education')">Education</p>
                         </div>
 
