--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <header id="header">
             <div class="container">
                 <nav>
-                    <img src="Logo.png" class="logo" alt="Logo">
+                    <img src="assets/Logo.png" class="logo" alt="Logo">
                     <ul id="sidemenu">
                         <li onclick="closemenu()"><a href="#" class="link" id="home-link">Home</a></li>
                         <li onclick="closemenu()"><a href="#about" class="link" id="about-link">About</a></li>
@@ -36,7 +36,7 @@
             <div class="container">
                 <div class="row">
                     <div class="about-col-1">
-                        <img src="mee.jpg" alt="Picture of Gabriel">
+                        <img src="assets/mee.jpg" alt="Picture of Gabriel">
                     </div>
                     <div class="about-col-2">
                         <h1 class="subtitle">About <span title="Gab was here">Me</span></h1>
@@ -102,21 +102,21 @@
                     <div class="hobby">
                         <h2>Bodybuilding</h2>
                         <video class="video-fill" controls width="100%">
-                            <source src="weights.mp4" type="video/mp4">
+                            <source src="assets/weights.mp4" type="video/mp4">
                             Your browser does not support the video tag.
                         </video>
                     </div>
                     <div class="hobby">
                         <h2>Playing w/ Pajit</h2>
                         <video class="video-fill" controls width="100%">
-                            <source src="pajit.mp4" type="video/mp4">
+                            <source src="assets/pajit.mp4" type="video/mp4">
                             Your browser does not support the video tag./
                         </video>
                     </div>
                     <div class="hobby">
                         <h2>Gaming</h2>
                         <video class="video-cover" controls width="100%">
-                            <source src="lenoj.mp4" type="video/mp4">
+                            <source src="assets/lenoj.mp4" type="video/mp4">
                             Your browser does not support the video tag.
                         </video>
                     </div>
@@ -130,9 +130,9 @@
                 <h1 class="subtitle">My Top 3 Music</h1>
                 <div class="music-player">
                     <h2 id="song-title">Balang Araw - I Belong to the Zoo</h2>
-                    <img id="album-art" src="m1.png" alt="Album Art" width="200px" />
+                    <img id="album-art" src="assets/m1.png" alt="Album Art" width="200px" />
                     <audio id="audio-player" controls controlslist="nodownload noplaybackrate nofastforward norewind">
-                        <source id="audio-source" src="balangaraw.mp3" type="audio/mpeg">
+                        <source id="audio-source" src="assets/balangaraw.mp3" type="audio/mpeg">
                         Your browser does not support the audio element.
                     </audio>
                     <div class="controls">
