--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                 <!-- Google Maps Embed -->
                 <div class="iframe-container">
                     <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d233.24059832544978!2d123.94119580323002!3d10.252692493411413!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTDCsDE1JzA5LjciTiAxMjPCsDU2JzI4LjgiRQ!5e1!3m2!1sen!2sph!4v1730299328074!5m2!1sen!2sph" 
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d59713.441406212514!2d123.91061900196156!3d10.232257110505756!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x33a99a5f4ca9458b%3A0xb54b99141f10a9d!2sCordova%2C%20Cebu!5e1!3m2!1sen!2sph!4v1731472589578!5m2!1sen!2sph"
                         allowfullscreen="" 
                         loading="lazy">
                     </iframe>
