--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                                 <li><span>Age:</span><br>19</li>
                                 <li><span>Date of Birth:</span><br>January 23, 2005</li>
                                 <li><span>Sex:</span><br>Male</li>
-                                <li><span>Address:</span><br><a href="https://maps.app.goo.gl/ugv5CRQCZcN5pYzF8" style="color: inherit;">Buagsong Cordova Cebu</a></li>
+                                <li><span>Address:</span><br><a href="https://maps.app.goo.gl/ugv5CRQCZcN5pYzF8" style="color: inherit;">ordova Cebu</a></li>
                             </ul>
                         </div>
                         <div class="tab-contents" id="skills">
@@ -84,7 +84,7 @@
                         </div>
                         <div class="tab-contents" id="education">
                             <ul>
-                                <li><span>Elementary:</span><br>Buagsong Elementary School(BES)</li>
+                                <li><span>Elementary:</span><br>BES</li>
                                 <li><span>High School:</span><br>Cordova Catholic Cooperative School(CCCS)</li>
                                 <li><span>College:</span><br>Cebu Technological University(CTU)</li>
                             </ul>
